# c-download-manager

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: decisoes-config.md
src/: config.cpp  constants.hpp  download_manager.cpp  download_manager.hpp  downloader.cpp  main.cpp  ui.cpp  utils.cpp
src/includes/: config.h  constants.h  download_manager.h  downloader.h  observer.h  structs.h  ui.h  utils.h
